--- a/app/src/main/res/layout/fragment_study.xml
+++ b/app/src/main/res/layout/fragment_study.xml
@@ -44,7 +44,7 @@
             android:layout_margin="16dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:id="@+id/anatomyCard"
+            android:id="@+id/Professional1stCard"
             android:clickable="true">
 
             <LinearLayout
@@ -61,19 +61,11 @@
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
                     android:layout_marginTop="8dp"
-                    android:text="Anatomy"
+                    android:text="1st Professional"
                     android:textSize="18dp"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:layout_gravity="center"
-                    android:id="@+id/netIncomeView"
-                    android:text="0 question solved"
-                    android:layout_marginTop="10dp"/>
 
             </LinearLayout>
 
@@ -89,7 +81,7 @@
             android:layout_margin="16dp"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:id="@+id/physiologyCard"
+            android:id="@+id/Professional2ndCard"
             android:clickable="true">
 
             <LinearLayout
@@ -106,19 +98,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="Physiology"
+                    android:text="2nd Professional"
                     android:textSize="18dp"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:layout_gravity="center"
-                    android:id="@+id/totalLeavesView"
-                    android:text="0 question solved"
-                    android:layout_marginTop="10dp"/>
 
             </LinearLayout>
 
@@ -135,7 +119,7 @@
             app:cardBackgroundColor="#e18012"
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
-            android:id="@+id/biochemistryCard"
+            android:id="@+id/Professional3rdCard"
             android:clickable="true">
 
             <LinearLayout
@@ -151,19 +135,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="Biochemistry"
+                    android:text="3rd Professional"
                     android:textSize="18dp"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:layout_gravity="center"
-                    android:id="@+id/projectAssignedView"
-                    android:text="0 question solved"
-                    android:layout_marginTop="10dp"/>
 
             </LinearLayout>
 
@@ -179,7 +155,7 @@
             app:cardElevation="8dp"
             app:cardCornerRadius="8dp"
             android:layout_margin="16dp"
-            android:id="@+id/pathologyCard"
+            android:id="@+id/Professional4thCard"
             android:clickable="true">
 
             <LinearLayout
@@ -196,19 +172,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
-                    android:text="Pathology"
+                    android:text="4th Professional"
                     android:textSize="18dp"
                     android:textAlignment="center"
                     android:layout_gravity="center"
                     />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:layout_gravity="center"
-                    android:id="@+id/workingHourView"
-                    android:text="0 question solved"
-                    android:layout_marginTop="10dp"/>
 
 
             </LinearLayout>
