Floating button added in 1st professional

--- a/app/src/main/res/layout/activity_professional1st.xml
+++ b/app/src/main/res/layout/activity_professional1st.xml
@@ -61,7 +61,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="8dp"
                         android:text="Anatomy"
                         android:textAlignment="center"
                         android:textSize="18dp"
@@ -96,7 +95,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="8dp"
                         android:text="Physiology"
                         android:textAlignment="center"
                         android:textSize="18dp"
@@ -131,7 +129,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="8dp"
                         android:text="Biochemistry"
                         android:textAlignment="center"
                         android:textSize="18dp"
@@ -166,7 +163,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_marginTop="8dp"
                         android:text="Mock Test"
                         android:textAlignment="center"
                         android:textSize="18dp"
@@ -176,18 +172,22 @@
 
             </android.support.v7.widget.CardView>
 
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:layout_margin="@dimen/fab_margin"
-                app:srcCompat="@android:drawable/ic_dialog_email" />
 
         </GridLayout>
 
     </ScrollView>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/changeProfession"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginBottom="22dp"
+        android:layout_marginRight="22dp"
+        app:srcCompat="@drawable/ic_open_with_black"
+        tools:ignore="VectorDrawableCompat" />
 
 
 </RelativeLayout>
