--- a/app/src/main/res/layout/activity_professional1st.xml
+++ b/app/src/main/res/layout/activity_professional1st.xml
@@ -37,7 +37,7 @@
             android:rowOrderPreserved="true">
 
             <android.support.v7.widget.CardView
-                android:id="@+id/anatomyCard"
+                android:id="@+id/AnatomyCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
@@ -71,7 +71,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/physiologyCard"
+                android:id="@+id/PhysiologyCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
@@ -105,7 +105,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/biochemistryCard"
+                android:id="@+id/BiochemistryCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
@@ -139,7 +139,7 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                android:id="@+id/mockTestCard"
+                android:id="@+id/MockTestCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_column="0"
