RecyclerView added in anatomy

--- a/app/src/main/res/layout/fragment_mcqs.xml
+++ b/app/src/main/res/layout/fragment_mcqs.xml
@@ -5,19 +5,14 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DifferentMaterialsActivity">
+    tools:context=".DifferentMaterialsActivity"
+    android:padding="10dp">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MCQs"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
+        android:id="@+id/recyclerViewChapters">
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
