--- a/app/src/main/res/layout/list_item_chapters.xml
+++ b/app/src/main/res/layout/list_item_chapters.xml
@@ -12,6 +12,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:id="@+id/linearLayoutChapters"
             android:padding="10dp">
 
             <TextView
