exit dialog added in questions activity

--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -45,6 +45,7 @@
                 android:layout_alignParentRight="true"
                 android:text="EXIT"
                 android:id="@+id/exitQuestions"
+                android:onClick="exitQuestions"
                 />
 
             <LinearLayout
