Separate Layout for different types created and data passed

--- a/app/src/main/res/layout/activity_pyqs.xml
+++ b/app/src/main/res/layout/activity_pyqs.xml
@@ -4,11 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudyAlteringActivity">
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/detailView"/>
+    tools:context=".PYQsActivity">
 
 </RelativeLayout>
