--- a/app/src/main/res/layout/activity_pyqs_altering.xml
+++ b/app/src/main/res/layout/activity_pyqs_altering.xml
@@ -4,33 +4,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PYQsAlteringActivity">
+    tools:context=".PYQsAlteringActivity"
+    android:padding="10dp">
 
-    <Button
-        android:id="@+id/selectFile"
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="89dp"
-        android:text="select file" />
+        android:text="New PYQ File"
+        android:id="@+id/headingPYQAdding"
+        android:textSize="28dp"
+        android:gravity="center"
+        android:textStyle="bold"/>
+
+    <android.support.design.widget.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/pyqFileNameLayout"
+        android:layout_below="@+id/headingPYQAdding"
+        android:layout_marginHorizontal="20dp">
+
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/pyqFileName"
+            android:hint="Enter File Name"
+            android:layout_marginTop="30dp"
+            />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/pyqFileNameLayout"
+        android:layout_marginTop="50dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp"
+        android:layout_marginHorizontal="30dp"
+        android:id="@+id/cardViewToSelect"
+        android:background="#000000"
+        >
+
+        <Button
+            android:id="@+id/selectFile"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="select file"
+            android:background="#da4444"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="20dp"/>
+
+    </android.support.v7.widget.CardView>
 
     <TextView
         android:id="@+id/notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_below="@id/cardViewToSelect"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="154dp"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp"
         android:text="No File Selected" />
 
-    <Button
-        android:id="@+id/upload"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="178dp"
-        android:text="Upload" />
+        android:layout_marginBottom="30dp"
+        android:layout_marginHorizontal="30dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp">
+
+        <Button
+            android:id="@+id/upload"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Upload"
+            android:background="#da4444"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="20dp"/>
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
