--- a/app/src/main/res/layout/activity_adding_option_b.xml
+++ b/app/src/main/res/layout/activity_adding_option_b.xml
@@ -21,6 +21,15 @@
 
     </android.support.design.widget.TextInputLayout>
 
+    <Switch
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/switch2"
+        android:padding="5dp"
+        android:layout_alignTop="@+id/textInputLayout3"
+        android:layout_alignBottom="@+id/textInputLayout3"
+        android:layout_alignRight="@+id/textInputLayout3"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,7 +61,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:id="@+id/showImageOption2"
-        android:layout_below="@id/linearLayout12"
+        android:layout_below="@id/linearLayout11"
         android:layout_above="@id/progressBar2"/>
 
     <ProgressBar
