--- a/app/src/main/res/layout/activity_adding_option_d.xml
+++ b/app/src/main/res/layout/activity_adding_option_d.xml
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/uploadImageOption4"
             android:layout_weight="1"
-            android:text="Upload"/>
+            android:text="submit and next"/>
 
     </LinearLayout>
 
