--- a/app/src/main/res/layout/activity_sets_altering.xml
+++ b/app/src/main/res/layout/activity_sets_altering.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SetsAlteringActivity">
+    tools:context=".SetsAlteringActivity"
+    android:padding="10dp">
 
     <TextView
         android:layout_width="match_parent"
@@ -12,33 +13,47 @@
         android:id="@+id/newSetTextView"
         android:text="Add New Set"
         android:gravity="center_horizontal"
-        android:textSize="40sp"
+        android:textSize="28sp"
         android:textStyle="bold"
-        android:textAppearance="@style/Theme.AppCompat"/>
+        android:textAppearance="@style/Theme.AppCompat" />
 
-    <EditText
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/setEditText"
+        android:id="@+id/setNameLayout"
         android:layout_below="@+id/newSetTextView"
-        android:layout_margin="15dp"
-        android:hint="Set"/>
+        android:layout_marginHorizontal="20dp">
 
-    <Button
+        <android.support.design.widget.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/setEditText"
+            android:hint="Enter Set name"
+            android:layout_marginTop="30dp" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/setEditText"
-        android:layout_margin="15dp"
-        android:id="@+id/submitButton"
-        android:text="submit"/>
+        android:layout_below="@+id/setNameLayout"
+        android:layout_marginTop="50dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp"
+        android:layout_marginHorizontal="30dp"
+        android:id="@+id/cardViewToSelect"
+        android:background="#000000">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/submitButton"
-        android:layout_margin="15dp"
-        android:id="@+id/showSetTextView"
-        android:hint="text"
-        android:textAlignment="center"/>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/submitSetButton"
+            android:text="submit"
+            android:background="#da4444"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="20sp" />
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
